29.2.2 (21-04-2020)
- Bug Fix: Avoid NPE searching for curricular period on degree curricular plan
- Bug Fix: Earth unit should have party type

29.2.1 (20-04-2020)
- Bug Fix: Set party type as null by invoked the method of the base class

29.2.0 (19-04-2020)
- Improvement: Add type Person to PartyTypeEnum
- Improvement: Improve error message of comparing grades of different scales, with the printing the different scales

29.1.0 (13-04-2020)
- Improvement: Rewrite of method ExecutionCourse.getDegreePresentationString() to improve performance 
- Improvement: Support for custom names in PartyType and AccountabilityType 
- Fix: Creation of AcademicYearCE should always create a correspondent ExecutionYear

29.0.0 (04-04-2020)
- Refactor: Deprecated PrecedentDegreeInformation slots cleanup
- Refactor: Removal of organizational Units subclasses and unused methods
- Improvement: Add ExecutionInterval aggregators find methods

28.8.0 (27-03-2020)
- Refactor: Prepare code to allow mixing of different academic period types on same degree curricular plan (contexts and curricular rules validity are now always evaluated for execution year)
- Fix: Added responsibleFor setter with primitive boolean param

28.7.0 (19-03-2020)
- Refactor: PrecedentDegreeInformation split into 'completed' and 'previous'  
- Fix: Deletion of AcademicCalendarEntries connected to ExecutionIntervals

28.6.0 (18-03-2020)
- Improvement: added support for AcademicPeriod type Other

28.5.1 (12-03-2020)
- Improvement: Removed unused dependency of jaxws-rs api

28.5.0 (12-03-2020)
- New feature: Support for Java 11

28.4.0 (10-03-2020)
- Fix: ExecutionInterval method overloading dispatching 

28.3.0 (10-03-2020)
- Refactor: Removed deprecated relation between PrecedentDegreeInformation and Registration

28.2.0 (04-03-2020)
- Refactor: Removed deprecated relation between PrecedentDegreeInformation and PersonalIngressionData

28.1.0 (02-03-2020)
- Refactor: Unused PrecedentDegreeInformation slots cleanup