@@ -1,3 +1,5 @@
+- Bug Fix: Academic office student search should display degree type on active registrations 
+
 29.2.2 (21-04-2020)
 - Bug Fix: Avoid NPE searching for curricular period on degree curricular plan
 - Bug Fix: Earth unit should have party type
